chapter5/my-first-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 10.32.118.159
    ports:
      - port: 8000
