chapter5/my-first-svc-external-domain.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service2
spec:
  type: ExternalName
  externalName: baidu.com
  ports:
    - port: 80
