chapter5/my-first-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-svc-headless
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8088
  selector:
    app: my-first-app01
