chapter5/my-first-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-svc-nodeport
spec:
  type: NodePort
  ports:
    - port: 8090
      targetPort: 8088
      nodePort: 30123
  selector:
    app: my-first-app01
