chapter5/my-first-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-svc
spec:
  ports:
    - port: 8090
      targetPort: 8088
  selector:
    app: my-first-app01
