chapter5/my-first-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-first-ingress01
spec:
  rules:
    - host: my-first-svc-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-first-svc
                port:
                  number: 8090
